[fix] temp solution for tiles overlapping bug

--- a/assets/styles/modules/feed.less
+++ b/assets/styles/modules/feed.less
@@ -8,7 +8,7 @@ body.feed {
     background-color: #e5e5e5;
     box-shadow: -1px 1px 5px 1px #8c8c8c;
     margin-bottom: 30px;
-    transition: ease-out 0.15s;
+    transition: 0.15s;
     .main {
       cursor: pointer;
       .headline {
